--- a/assets/style.css
+++ b/assets/style.css
@@ -1,7 +1,7 @@
 :root {
     --text-color: #DBE4EF;
-    --card-front-color: #e2ec57;
-    --card-back-color: #f3fc7b;
+    --card-front-color: #f1f7a3;
+    --card-back-color: #ebf0a3;
 }
 
 body {
