--- a/assets/style.css
+++ b/assets/style.css
@@ -5,7 +5,7 @@
 }
 
 body {
-    background: url('img/bg-desktop.webp');
+    background: url('img/flor-amarela0.2');
     font-family: Bai Jamjuree;
 }
 
